--- a/UI/style.css
+++ b/UI/style.css
@@ -46,8 +46,14 @@ button:hover {
 .image {
   width: 100%;
   padding: 10px 0px;
-  display: none;
 }
+
+.image.sm {
+  width: 50%;
+  padding: 10px 0px;
+  height: 100%;
+}
+
 
 .container {
   margin: 5% auto;
@@ -60,8 +66,21 @@ button:hover {
   box-shadow: 0 3px 2px #8080806e;
 }
 
+.container.flex {
+  width: 1000px;
+  display: flex;
+  background-color: white;
+}
+
+.container.flex > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+
 .left {
-  float: right;
+  float: left;
 }
 
 .right {
