added meetup page

--- a/UI/style.css
+++ b/UI/style.css
@@ -77,6 +77,17 @@ button:hover {
   box-shadow: 0 3px 2px #8080806e;
 }
 
+.container.md {
+  margin: 5% auto;
+  width: 250px;
+  padding: 20px 40px;
+  background-color: white;
+  border-radius: 15px;
+  opacity: 0.9;
+  border: 1px solid gray;
+  box-shadow: 0 3px 2px #8080806e;
+}
+
 .d-flex {
   display: flex;
   flex-direction: row;
@@ -189,7 +200,8 @@ footer {
 
 .col-3 {
   width: 30.33%;
-  padding: 10px 50px;
+  padding: 10px 50px 30px 0px;
+
 }
 
 /* Clear floats after the columns */
