--- a/UI/style.css
+++ b/UI/style.css
@@ -57,24 +57,48 @@ button:hover {
 
 .container {
   margin: 5% auto;
-  width: 330px;
+  width: 30%;
   padding: 20px 40px;
   background-color: white;
   border-radius: 15px;
   opacity: 0.9;
   border: 1px solid gray;
   box-shadow: 0 3px 2px #8080806e;
+  margin-bottom: 100px;
 }
 
 .container.sm {
-  margin: 5% auto;
-  width: 150px;
-  padding: 20px 40px;
-  background-color: white;
-  border-radius: 15px;
-  opacity: 0.9;
-  border: 1px solid gray;
-  box-shadow: 0 3px 2px #8080806e;
+  width: 50%;
+}
+
+h4 {
+  font: normal 700 18px/24px "Raleway", sans-serif !important;
+  letter-spacing: 1px !important;
+  text-transform: capitalize !important;
+  color: #000000 !important;
+}
+
+.text-holder {
+  /* padding: 23px 30px 70px 30px; */
+  padding: 0px;
+}
+
+.details {
+  margin-bottom: 12px;
+  padding: 0px;
+}
+
+.details li:first-child {
+  margin-left: 0;
+}
+
+.details li {
+  list-style: none;
+  line-height: 28px;
+  padding: 0px;
+  display: inline-block;
+  position: relative;
+  margin: 0 10px;
 }
 
 .container.md {
@@ -86,13 +110,6 @@ button:hover {
   opacity: 0.9;
   border: 1px solid gray;
   box-shadow: 0 3px 2px #8080806e;
-}
-
-.d-flex {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding-top: 2rem;
 }
 
 footer {
@@ -109,6 +126,10 @@ footer {
   text-align: center;
 }
 
+.left {
+  text-align: left;
+}
+
 .error {
   color: red;
   text-align: center;
@@ -117,6 +138,10 @@ footer {
 
 .font12 {
   font-size: 12px;
+}
+
+.font16 {
+  font-size: 16px
 }
 
 .image-upload > input
@@ -141,13 +166,16 @@ footer {
 /* Style the header links */
 .header a {
   float: left;
-  color: black;
   text-align: center;
   padding: 12px;
-  text-decoration: none;
   font-size: 18px; 
   line-height: 25px;
   border-radius: 4px;
+}
+
+a {
+  color: black;;
+  text-decoration: none;
 }
 
 /* Style the logo link  */
@@ -180,31 +208,49 @@ footer {
   height: 600px;
 }
 
-/*media queries for responsiveness - when the screen is 500px wide or less */ 
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .header-right {
-    float: none;
-  }
-}
-
 /* Create two equal columns that floats next to each other */
-.column {
-  width: 50%;
-  padding: 50px;
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+  padding-top: 30px;
 }
 
-.col-3 {
-  width: 30.33%;
-  padding: 10px 50px 30px 0px;
-
+.flex.no-border > div {
+  width: 40%;
+  border: 0px;
+  box-shadow: 0 0px 0px;
 }
 
-/* Clear floats after the columns */
-.row {
-  display: flex
+.flex > div {
+  width: 25%;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 15px;
+  text-align: center;
+  /* line-height: 7px; */
+  font-size: 10px;
+  border: 1px solid gray;
+  box-shadow: 0 3px 2px #8080806e;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 50px;
+}
+
+@media screen and (max-width: 992px) {
+  .flex > div {
+    flex: 50%;
+  }
+  .container {
+    width: 50%
+  }
+}
+@media screen and (max-width: 600px) {
+  .flex > div {
+    flex: 100%;
+  }
+  .container {
+    width: 70%
+  }
 }
