--- a/UI/style.css
+++ b/UI/style.css
@@ -1,6 +1,5 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: whitesmoke;
 }
 
 input[type=email], input[type=password], input[type=text],  input[type=date] {
@@ -31,11 +30,11 @@ button {
 .md {
   width: 25%
 }
-
+/* 
 textarea {
   margin-left: 33%;
   margin-right: 33%;
-}
+} */
 
 button:hover {
   opacity: 0.8;
@@ -70,6 +69,7 @@ button:hover {
 
 .container {
   margin: 5% auto;
+  margin-top: 0px;
   width: 30%;
   padding: 20px 40px;
   background-color: white;
