--- a/UI/style.css
+++ b/UI/style.css
@@ -227,11 +227,15 @@ a {
   padding: 0 !important;
 }
 
-
 /* Change the background color on mouse-over */
+
 .header a:hover {
   background-color: #ddd;
   color: black;
+}
+
+.header a:hover:first-child {
+  background-color: white;
 }
 
 /* Style the active/current link*/
