--- a/UI/style.css
+++ b/UI/style.css
@@ -13,6 +13,24 @@ input[type=email], input[type=password], input[type=text],  input[type=date], te
   box-sizing: border-box;
 }
 
+.alert {
+  padding: 10px;
+  background-color: #e99494;
+  border-left: 6px solid #f44336;
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
 button {
   background-color: blue;
   color: white;
@@ -179,12 +197,6 @@ footer {
 
 .right {
   text-align: right;
-}
-
-.error {
-  color: red;
-  text-align: center;
-  display: none;
 }
 
 .font12 {
